# viz-htmlx-css

./: Cargo.toml  README.md
data/: posts.json
src/: main.rs
static/: styles.css
templates/: index.html  post.html  todos.html
