[package]
name = "viz-api"
version = "0.1.0"
edition = "2021"

[dependencies]
viz = { version = "0.8.8", features = ["handlers", "serve"] }

tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
handlebars = { version = "5.1.2", features = ["dir_source"] }
once_cell = "1.19.0"

http = "1.1.0"
hyper = { version = "1.3.1", features = ["full"] }
http-body-util = "0.1.2"
bytes = "1.6.0"
include_dir = "0.7.4"
